--- a/app/src/main/resources/MainView.fxml
+++ b/app/src/main/resources/MainView.fxml
@@ -24,11 +24,11 @@
     </center>
     
     <right>
-        <VBox spacing="10" alignment="CENTER">
-            <Label text="Uscite" style="-fx-font-size: 14; -fx-font-weight: bold;"/>
-            <PieChart fx:id="pieExpense" prefWidth="350" prefHeight="250"/>
-            <Label text="Entrate" style="-fx-font-size: 14; -fx-font-weight: bold;"/>
+        <VBox spacing="10" alignment="CENTER" style="-fx-background-color: #323233; -fx-padding: 20;">
+            <Label text="Entrate" style="-fx-font-size: 14; -fx-font-weight: bold; -fx-text-fill: #00ff00;"/>
             <PieChart fx:id="pieIncome"  prefWidth="350" prefHeight="250"/>
+            <Label text="Uscite" style="-fx-font-size: 14; -fx-font-weight: bold; -fx-text-fill: #ff0000;"/>
+            <PieChart fx:id="pieExpense" prefWidth="350" prefHeight="250"/>
         </VBox>
     </right>
 </BorderPane>
