Added category max budget feature

--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -12,6 +12,10 @@
     <!-- ───────── Toolbar ───────── -->
     <top>
         <ToolBar>
+            <Button text="Opzioni" onAction="#onOptions"/>
+
+            <Separator orientation="VERTICAL"/>
+
             <Button text="Aggiungi" onAction="#onAdd"/>
             <Button text="Modifica" fx:id="btnEdit" onAction="#onEdit"/>
             <Button text="Rimuovi" onAction="#onRemove"/>
