Added money trend chart feature

--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -70,6 +70,7 @@
             </HBox>
 
             <Label fx:id="lblSaldo" alignment="CENTER"/>
+            <Button fx:id="btnTrend" text="Andamento" onAction="#onTrend" alignment="CENTER"/>
         </VBox>
     </center>
 </BorderPane>
