--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -62,10 +62,12 @@
                 <VBox alignment="CENTER">
                     <Label text="Entrate" style="-fx-font-weight:700;"/>
                     <PieChart fx:id="pieIncome" prefWidth="720" prefHeight="480"/>
+                    <Label fx:id="lblTotIncome" styleClass="chart-total"/>
                 </VBox>
                 <VBox alignment="CENTER">
                     <Label text="Uscite" style="-fx-font-weight:700;"/>
                     <PieChart fx:id="pieExpense" prefWidth="720" prefHeight="480"/>
+                    <Label fx:id="lblTotExpense" styleClass="chart-total"/>
                 </VBox>
             </HBox>
 
