Fixed search field not filtering + minor fixes

--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -39,7 +39,7 @@
                         
             <Separator orientation="VERTICAL"/>
             
-            <TextField fx:id="txtSearch" promptText="Cerca..."/>
+            <TextField fx:id="txtSearch" promptText="Cerca..." onKeyReleased="#applyFilters" prefWidth="160"/>
 
             <Separator orientation="VERTICAL"/>
             
